<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="#CAC7C6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_hint"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/button_bid"
            android:layout_toLeftOf="@id/button_bid"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageButton
            android:src="@drawable/ic_bid"
            android:id="@+id/button_bid"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/item_expiration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button_bid"
            android:text="@string/offer_expiration_text"
            />

        <TextView
            android:id="@+id/item_expiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_expiration_text"
            android:layout_below="@id/button_bid"
            />

        <TextView
            android:id="@+id/item_start_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_expiration_text"
            android:text="@string/price_text" />

        <TextView
            android:id="@+id/item_start_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_start_price_text"
            android:layout_below="@id/item_expiration" />

        <TextView
            android:id="@+id/item_current_bid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_start_price_text"
            android:text="@string/current_bid_text" />

        <TextView
            android:id="@+id/item_current_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_start_price"
            android:layout_toRightOf="@id/item_current_bid_text" />

        <TextView
            android:id="@+id/item_seller_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_current_bid_text"
            android:text="@string/seller_text" />

        <TextView
            android:id="@+id/item_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_current_bid"
            android:layout_toRightOf="@id/item_seller_text" />

        <TextView
            android:id="@+id/item_bidder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_seller_text"
            android:text="@string/highest_bidder_text" />

        <TextView
            android:id="@+id/item_bidder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_seller"
            android:layout_toRightOf="@id/item_bidder_text" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>